3-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app1.id

  tags = {
    Name    = "app1_IG"
    Service = "dev"
    Owner   = "Tawan"
    Planet  = "terraform-training"
  }
}
